--- a/src/pwa/manifest.json
+++ b/src/pwa/manifest.json
@@ -5,8 +5,8 @@
     "background_color": "#3767AD",
     "display": "standalone",
     "orientation": "portrait",
-    "scope": "/hydrapp/",
-    "start_url": "/hydrapp/",
+    "scope": "/hydroapp/",
+    "start_url": "/hydroapp/",
     "icons": [
       {
         "src": "assets/pwa/icons/icon-72x72",
